@@ -281,8 +281,9 @@ This behaviour may change in a future release.
 Only output alignments with tag
 .I STR1
 and associated value
-.I STR2
-[null]. The value can be omitted, in which case only the tag is considered.
+.IR STR2 ,
+which can be a string or an integer [null].
+The value can be omitted, in which case only the tag is considered.
 .TP
 .BI "-D " STR:FILE
 Only output alignments with tag
